<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChargeCardActivity">

    <TextView
        android:id="@+id/charge_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/checkout"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/charge_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/charge_checkout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/charge_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30.00€"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/charge_total"
        app:layout_constraintStart_toStartOf="parent"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/charge_cards_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/charge_amount"
        />

    <Button
        android:id="@+id/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charge_cards_recycler_view" />


</android.support.constraint.ConstraintLayout>